# advent-of-code2024

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/common/: common.hpp
cpp/day1/: day1.cpp
cpp/solutions/: day1.cpp  day2.cpp  day3.cpp
day1/: day1.cpp  day1.py
day2/: day2.py
day3/: day3.py
editorials/: Day 1 Historian Hysteria.md
python/: common.py  main.py  main_log.txt
python/common/: common.py
python/day1/: day1.py
python/day2/: day2.py
python/day7/: day7.py
python/day8/: day8.py
python/solutions/: common.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day8.py  day9.py
